Add order status and expand API controllers, v0.1.0
Bump API version and add Flyway; add DB migrations (V1 baseline, V2 seed, V3 update orders). Introduce OrderStatus enum and integrate status into Order model and OrderDTO. Add favorite flag to AddressDTO and ClientAddress, and add @JsonIgnore to OrderItem.order to avoid serialization cycles. Expand and standardize REST controllers (Client, Item, City, Order, Auth) with full CRUD, address endpoints, filtering orders by status, and PATCH endpoints to conclude/unconclude orders. Include various configuration and utility formatting fixes (CORS, JWT, rate limiter) and frontend updates (App, api, components, new ConcludedOrders page and order form changes) to support the new features.